--- a/css/index3.css
+++ b/css/index3.css
@@ -6,7 +6,7 @@ header {
 }
 
 .nav-item {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto';
     color: #1D1D1D;
     font-weight: 600;
     font-style: normal;
@@ -16,11 +16,20 @@ header {
 }
 
 .hero {
-    height: 80vh;
+    height: 90vh;
     background: linear-gradient(rgba(29, 29, 29, 0.5), rgba(29, 29, 29, 0.5)), url("../index3-img/Hero-Image.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.hero-text {
+    padding-top: 200px;
+    font-family: 'Roboto';
+    font-weight: 100;
+    font-style: normal;
+    font-size: 40px;
+    line-height: 50px;
 }
 
 
@@ -32,5 +41,21 @@ header {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+        height: 80vh;
+    }
+    .hero-text {
+        font-size: 25px;
+        padding-top: 150px;
+        line-height: 35px;
     }
 }
+
+
+/* @media screen and (max-width: 991px) {
+    .hero {
+        background: linear-gradient(rgba(29, 29, 29, 0.5), rgba(29, 29, 29, 0.5)), url("../index3-img/Hero-img-mob.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+} */
