--- a/css/index3.css
+++ b/css/index3.css
@@ -51,7 +51,7 @@ header {
     position: absolute;
     top: 80px;
     height: 32vh;
-    right: 15px;
+    right: 10px;
     width: 3vw;
     background: #FE5D26;
     transform: rotate(180deg)
@@ -63,6 +63,68 @@ header {
     color: #1D1D1D;
     text-align: center;
     display: inline-block;
+}
+
+.rectangle-2 {
+    position: absolute;
+    top: 80px;
+    height: 32vh;
+    width: 3vw;
+    background: #FE5D26;
+    transform: rotate(180deg)
+}
+
+.rectangle-2 p {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    color: #1D1D1D;
+    text-align: center;
+    display: inline-block;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li::before {
+    content: "\002B24";
+    color: #FE5D26;
+    /* font-size: 12px; */
+    font-weight: 900;
+    display: inline-block;
+    width: 1.5em;
+    margin-left: -1em;
+}
+
+.image-stack {
+    display: grid;
+    position: relative;
+    /* imperative for the overlapping to work */
+    grid-template-columns: repeat(12, 1fr);
+}
+
+.image-stack__item--bottom {
+    grid-column: 2 / -1;
+    grid-row: 1;
+}
+
+.image-stack__item--right {
+    grid-column: 2 / -1;
+    /* grid-row: 1; */
+}
+
+.image-stack__item--top {
+    grid-row: 1;
+    grid-column: 1 / span 8;
+    padding-top: 30%;
+    /* / slightly arbitrary, keeps proportion once resized */
+    z-index: 1;
+    /* // tells the browser to make this image on top */
+}
+
+img {
+    width: 100%;
+    display: block;
 }
 
 
