--- a/css/index3.css
+++ b/css/index3.css
@@ -86,7 +86,7 @@ ul {
     list-style: none;
 }
 
-ul li::before {
+.lorem ul li::before {
     content: "\002B24";
     color: #FE5D26;
     /* font-size: 12px; */
@@ -109,6 +109,25 @@ ul li::before {
 .card-text span {
     text-align: center;
     font-size: 16px;
+}
+
+.foot {
+    background: #1D1D1D;
+    color: white;
+    padding: 60px;
+}
+
+.head-caption {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 46px;
+    color: #FFFFFF;
+}
+
+li {
+    margin: 0px;
+    padding: 0px;
 }
 
 
