--- a/css/index3.css
+++ b/css/index3.css
@@ -51,6 +51,11 @@ header {
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
+.border-orange-services {
+    border: 2px solid #FE5D26;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+}
+
 .rectangle {
     position: absolute;
     top: 80px;
@@ -155,6 +160,10 @@ li {
     height: auto;
 }
 
+.emily-text p {
+    padding-top: 50px;
+}
+
 
 /* MEDIA QUERIES */
 
@@ -239,6 +248,12 @@ li {
         color: #1D1D1D;
         font-size: 8px;
         font-weight: 500;
+    }
+    .emily-text p {
+        padding-top: 2px;
+    }
+    .border-orange-services {
+        display: none;
     }
 }
 
